--- a/app/views/budgets/_picker.html.erb
+++ b/app/views/budgets/_picker.html.erb
@@ -35,7 +35,7 @@
     <div class="grid grid-cols-3 gap-2 text-sm text-center font-medium">
       <% (1..12).each do |month| %>
         <% date = Date.new(year, month, 1) %>
-        <% month_name = l(date, format: "%b") %>
+        <% month_name = t("date.standalone_month_names")[month] %>
         <% param_key = Budget.date_to_param(date) %>
 
         <% if Budget.budget_date_valid?(date, family: family) %>
