--- a/app/views/accounts/_accountable_group.html.erb
+++ b/app/views/accounts/_accountable_group.html.erb
@@ -7,7 +7,7 @@
       <div class="flex items-center gap-3">
         <%= icon "chevron-right", class: "group-open:transform group-open:rotate-90" %>
         <%= tag.span class: class_names("text-sm text-primary font-medium", "animate-pulse" => account_group.syncing?) do %>
-          <%= account_group.name %>
+          <%= t("activerecord.models.account/#{account_group.key.underscore}", default: account_group.name) %>
         <% end %>
       </div>
 
@@ -53,7 +53,7 @@
     <div class="my-2">
       <%= render DS::Link.new(
       href: new_polymorphic_path(account_group.key, step: "method_select"),
-      text: t("accounts.sidebar.new_account_group", account_group: account_group.name.downcase.singularize),
+      text: t("accounts.sidebar.new_account_group", account_group: t("activerecord.models.account/#{account_group.key.underscore}", default: account_group.name).downcase),
       icon: "plus",
       full_width: true,
       variant: "ghost",
