--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -2,7 +2,7 @@
 
 <%= render "accounts/form", account: account, url: url do |form| %>
   <%= form.select :subtype,
-                 Property::SUBTYPES.map { |k, v| [v[:long], k] },
+                 Property::SUBTYPES.keys.map { |k| [Property.long_subtype_label_for(k), k] },
                  { label: true, prompt: t("properties.form.subtype_prompt"), include_blank: t("properties.form.none") } %>
 
   <%= render "shared/ruler", classes: "my-4" %>
