i18n: translate onboarding, breadcrumbs, and account subtypes to Russian

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -72,7 +72,7 @@
 
     <section>
       <%= hidden_field_tag :transaction_id, params[:transaction_id] %>
-      <%= f.submit %>
+      <%= f.submit category.persisted? ? t("categories.form.update") : t("categories.form.submit") %>
     </section>
   <% end %>
 </div>
